# BLE-Tripwire

./: .gitignore  APPLY-AND-TEST.md  FDROID.md  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: main.js  package-lock.json  package.json  server.js
app/src/main/assets/nodejs-project/data/tripwire/: observations.sample.jsonl
app/src/main/assets/nodejs-project/lib/: tripwire-intel.js
app/src/main/assets/nodejs-project/public/: dashboard.html
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/surfacevector/bletripwire/: MainActivity.java  NodeBridge.java  NodeService.java
app/src/main/jniLibs/arm64-v8a/: PLACEHOLDER_run_fetch-libnode.txt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_stat_tripwire.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
docs/: HARDWARE.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt
firmware/tripwire_node_01/: tripwire_node_01.ino
firmware/tripwire_node_02/: tripwire_node_02.ino
firmware/tripwire_node_03/: tripwire_node_03.ino
scripts/: fetch-libnode.sh
